Fix broken CSS image links

--- a/css/pages.css
+++ b/css/pages.css
@@ -424,29 +424,29 @@ table#alder-comp td.image-cell {
 }
 
 table#alder-comp span.alder-table-icon-1 {
-	background: url(../images/alder-table-icon-1.png) no-repeat top center;
+	background: url(../img/alder-table-icon-1.png) no-repeat top center;
 }
 table#alder-comp span.alder-table-icon-2 {
-	background: url(../images/alder-table-icon-2.png) no-repeat top center;
+	background: url(../img/alder-table-icon-2.png) no-repeat top center;
 }
 table#alder-comp span.alder-table-icon-3 {
-	background: url(../images/alder-table-icon-3.png) no-repeat top center;
+	background: url(../img/alder-table-icon-3.png) no-repeat top center;
 }
 table#alder-comp span.alder-table-icon-4 {
-	background: url(../images/alder-table-icon-4.png) no-repeat top center;
+	background: url(../img/alder-table-icon-4.png) no-repeat top center;
 }
 table#alder-comp span.alder-table-icon-5 {
-	background: url(../images/alder-table-icon-5.png) no-repeat top center;
+	background: url(../img/alder-table-icon-5.png) no-repeat top center;
 }
 table#alder-comp span.alder-table-icon-6 {
-	background: url(../images/alder-table-icon-6.png) no-repeat top center;
+	background: url(../img/alder-table-icon-6.png) no-repeat top center;
 }
 table#alder-comp span.alder-table-icon-7 {
-	background: url(../images/alder-table-icon-7.png) no-repeat top center;
+	background: url(../img/alder-table-icon-7.png) no-repeat top center;
 }
 
 div.table-bottom-image {
-	background: url(../images/content-background.png) -10px -7px no-repeat;
+	background: url(../img/content-background.png) -10px -7px no-repeat;
 }
 
 /* resources > alder > table */
